# simple-ogre-project

./: CMakeLists.txt  README.md  main.cpp
models/: Circle.mesh  Circle.mesh.xml  Material.002.material
